# aiida-koopmans

./: .gitignore  .readthedocs.yml  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish-on-pypi.yml
.serena/: project.yml
.serena/memories/: conventions.md  core.md  suggested_commands.md  task_completion.md  tech_stack.md  workgraph_gotchas.md
docs/: Makefile
docs/source/: conf.py  index.rst
docs/source/user_guide/: get_started.rst
examples/: example_01.py
src/aiida_koopmans/: __init__.py  calculations.py  cli.py  helpers.py  ml_helpers.py  occupations.py  parsers.py  projections.py  types.py  ui_helpers.py  utils.py  wannier_merge.py
src/aiida_koopmans/calculations/: __init__.py  base.py  kcp.py  kcw.py  merge_evc.py  pw2wannier_decompose.py  wann2kcp.py
src/aiida_koopmans/data/: __init__.py
src/aiida_koopmans/parsers/: __init__.py  base.py  kcp.py  kcw.py  merge_evc.py  pw2wannier_decompose.py  wann2kcp.py
src/aiida_koopmans/workgraphs/: __init__.py  auto_wannierize.py  bands.py  block_wannierize.py  convert_spin.py  dfpt.py  folding.py  kcp.py  ml.py  mlwf_init.py  pdos.py  ph.py  pw.py  supercell.py  ui.py  variational_orbitals.py  wannier90.py
tests/: conftest.py  fixtures.py  test_auto_wannierize.py  test_block_wannierize.py  test_calculations.py  test_calculations_base.py  test_cli.py  test_convert_spin_calcfunction.py  test_decompose_workgraph.py  test_dfpt_workgraph.py  test_folding_workgraph.py  test_forkcalc_cmdline.py  test_kcp_calculation.py  test_kcp_workgraph.py  test_kcw_calculation.py  test_merge_evc_calculation.py  test_ml_helpers.py  test_ml_workgraph.py  test_mlwf_init.py  test_package_init.py  test_parallelization.py  test_pdos_workgraph.py  test_ph_workgraph.py  test_projection_blocks.py  test_pw2wannier_decompose_calculation.py  test_pw2wannier_decompose_parser.py  test_step_calculation.py  test_supercell.py  test_ui_helpers.py  test_ui_workgraph.py  test_wann2kcp_calculation.py  test_wannier_merge.py
tests/data/decompose_si/: si_00001.coeff  si_00001.power  si_00002.coeff  si_00002.power  si_gc_00001.coeff  si_gc_00002.coeff
tests/data/ui/: si_ui_reference.json
tests/parsers/: __init__.py  test_kcp_parser.py  test_kcw_parser.py  test_merge_evc_parser.py  test_wann2kcp_parser.py
tests/parsers/fixtures/kcp/tutorial_1_ozone_ki/: aiida.cpo
tests/parsers/fixtures/kcw_ham/default/: aiida.kho
tests/parsers/fixtures/merge_evc/merged_occupied/: aiida.out
tests/parsers/fixtures/wann2kcp/wannier2kcp_spinless/: aiida.wko
tests/parsers/test_kcp_parser/: test_kcp_parser_tutorial_1_ozone_ki.yml
tests/test_kcp_calculation/: test_kcp_tutorial_1_ozone_ki.cpi
