[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
# See https://www.python.org/dev/peps/pep-0621/
name = "aiida-koopmans"
dynamic = ["version"]  # read from aiida_koopmans/src/__init__.py
description = "AiiDA plugin for running Koopmans functional calculations"
authors = [{name = "Edward Linscott", email = "edwardlinscott@gmail.com"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Development Status :: 3 - Alpha",
    "Framework :: AiiDA"
]
keywords = ["aiida", "plugin"]
requires-python = ">=3.12,<3.14"
dependencies = [
    "aiida-core>=2.8,<3",
    "aiida-workgraph>=0.8.0",
    "aiida-wannier90>=2.2.0",
    "aiida-quantumespresso>=4.16.0",
    "aiida-wannier90-workflows>=2.5.0",
    "pydantic-espresso>=0.0.1",
    "node-graph>=0.6.5",
    "aiida-wannierjl",
]

[project.optional-dependencies]
pre-commit = [
  'pre-commit~=3.5',
]
docs = [
    "sphinx",
    "sphinxcontrib-contentui",
    "sphinxcontrib-details-directive",
    "furo",
    "markupsafe<2.1"
]

[project.urls]
Source = "https://github.com/elinscott/aiida-koopmans"

[project.entry-points."aiida.data"]
"koopmans.aiida_koopmans.types.SpinChannel" = "aiida.orm.nodes.data.enum:EnumData"
"koopmans.aiida_quantumespresso.common.types.ElectronicType" = "aiida.orm.nodes.data.enum:EnumData"
"koopmans.aiida_quantumespresso.common.types.SpinType" = "aiida.orm.nodes.data.enum:EnumData"
"koopmans.aiida_wannier90_workflows.common.types.WannierProjectionType" = "aiida.orm.nodes.data.enum:EnumData"
"koopmans.aiida_wannier90_workflows.common.types.WannierDisentanglementType" = "aiida.orm.nodes.data.enum:EnumData"
"koopmans.aiida_wannier90_workflows.common.types.WannierFrozenType" = "aiida.orm.nodes.data.enum:EnumData"
"koopmans.aiida_wannier90_workflows.common.types.OptimizeStrategy" = "aiida.orm.nodes.data.enum:EnumData"
"koopmans.aiida_wannier90_workflows.common.types.OptimizeMetric" = "aiida.orm.nodes.data.enum:EnumData"
"koopmans.aiida_wannier90_workflows.common.types.OptimizeMuReference" = "aiida.orm.nodes.data.enum:EnumData"

[project.entry-points."aiida.calculations"]
"koopmans.kcp" = "aiida_koopmans.calculations.kcp:KcpCalculation"
"koopmans.wann2kcp" = "aiida_koopmans.calculations.wann2kcp:Wann2kcpCalculation"
"koopmans.merge_evc" = "aiida_koopmans.calculations.merge_evc:MergeEvcCalculation"
"koopmans.kcw_wann2kc" = "aiida_koopmans.calculations.kcw:Wann2kcCalculation"
"koopmans.kcw_screen" = "aiida_koopmans.calculations.kcw:KcwScreenCalculation"
"koopmans.kcw_ham" = "aiida_koopmans.calculations.kcw:KcwHamCalculation"
"koopmans.pw2wannier_decompose" = "aiida_koopmans.calculations.pw2wannier_decompose:Pw2wannierDecomposeCalculation"

[project.entry-points."aiida.parsers"]
"koopmans.kcp" = "aiida_koopmans.parsers.kcp:KcpParser"
"koopmans.wann2kcp" = "aiida_koopmans.parsers.wann2kcp:Wann2kcpParser"
"koopmans.merge_evc" = "aiida_koopmans.parsers.merge_evc:MergeEvcParser"
"koopmans.kcw_wann2kc" = "aiida_koopmans.parsers.kcw:Wann2kcParser"
"koopmans.kcw_screen" = "aiida_koopmans.parsers.kcw:KcwScreenParser"
"koopmans.kcw_ham" = "aiida_koopmans.parsers.kcw:KcwHamParser"
"koopmans.pw2wannier_decompose" = "aiida_koopmans.parsers.pw2wannier_decompose:Pw2wannierDecomposeParser"

[tool.pytest.ini_options]
# Configuration for [pytest](https://docs.pytest.org)
python_files = "test_*.py"
addopts = "--pdbcls=IPython.terminal.debugger:TerminalPdb"
filterwarnings = [
    "ignore::DeprecationWarning:aiida:",
    "ignore:Creating AiiDA configuration folder:",
    "ignore::DeprecationWarning:plumpy:",
    "ignore::DeprecationWarning:yaml:",
]


[tool.coverage.run]
# Configuration of [coverage.py](https://coverage.readthedocs.io)
# reporting which lines of your plugin are covered by tests
source = ["src/aiida_koopmans"]

[tool.ruff]
# Keep this section in sync with koopmans2/pyproject.toml — both repos share
# one lint/format policy for the rewrite.
line-length = 100
extend-include = ["*.ipynb"]

[tool.ruff.lint]
# DOC (pydoclint) is still a preview rule; opt in to that one alone without
# pulling in preview rules from other categories.
preview = true
explicit-preview-rules = true
# See https://docs.astral.sh/ruff/rules
extend-select = [
    "F",    # pyflakes
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "C90",  # mccabe
    "I",    # isort
    "UP",   # pyupgrade
    "D",    # pydocstyle
    "DOC",  # pydoclint (preview; activated by explicit-preview-rules)
    "B",    # bugbear
    "S",    # bandit
    "T20",  # print
    "N",    # pep8 naming
    "ERA",  # eradicate commented out code
    "NPY",  # numpy checks
    "RUF",  # ruff rules
    "C4",   # comprehensions
]
ignore = [
    "D105", # Missing docstring in magic method
    "E203", # Conflicts with formatter on slice colons
]

[tool.ruff.lint.per-file-ignores]
# Tests: descriptive names replace per-method docstrings; assert is the core idiom.
"tests/**/*.py" = ["D101", "D102", "D103", "D107", "S101"]
# Allow re-export shape in __init__.py files.
"src/aiida_koopmans/**/__init__.py" = ["F401", "F403"]
# aiida-workgraph @task.graph functions are conventionally CamelCase
# (see e.g. RunPwBands, Wannierize upstream).
"src/aiida_koopmans/workgraphs/*.py" = ["N802"]

[tool.ruff.lint.pydocstyle]
convention = "pep257"

[tool.ruff.lint.isort]
known-first-party = [
    "aiida_koopmans",
    "tests",
]

[tool.ruff.format]
docstring-code-format = true

## Hatch configurations

[tool.hatch.version]
path = "src/aiida_koopmans/__init__.py"

[tool.hatch.envs.hatch-test]
dependencies = [
    'pgtest~=1.3,>=1.3.1',
    'coverage~=7.0',
    'pytest~=7.0',
    "pytest-cov~=4.1",
    "pytest-regressions~=2.5",
    "ipdb",
    # The scheduler canary tests must exercise the real hyperqueue resource
    # class, which is not a runtime dependency of this package.
    "aiida-hyperqueue~=0.3",
]

[tool.hatch.envs.hatch-test.scripts]
# These are the default scripts provided by hatch.
# The have been copied to make the execution more transparent

# This command is run with the command `hatch test`
run = "pytest{env:HATCH_TEST_ARGS:} {args}"
# The three commands below are run with the command `hatch test --coverage`
run-cov = "coverage run -m pytest{env:HATCH_TEST_ARGS:} {args}"
cov-combine = "coverage combine"
cov-report = "coverage report"

[[tool.hatch.envs.hatch-test.matrix]]
python = ["3.12", "3.13", "3.14"]

[tool.hatch.envs.hatch-static-analysis]
dependencies = ["ruff==0.14.8"]  # keep in sync with .pre-commit-config.yaml

[tool.hatch.envs.hatch-static-analysis.scripts]
# Fixes are executed with `hatch fmt`.
# Checks are executed with `hatch fmt --check`.

format-check = "ruff format --check --config pyproject.toml {args:.}"
format-fix = "ruff format --config pyproject.toml {args:.}"
lint-check = "ruff check --config pyproject.toml {args:.}"
lint-fix = "ruff check --config pyproject.toml --fix --exit-non-zero-on-fix --show-fixes {args:.}"

[tool.uv.sources]
aiida-workgraph = { path = "../aiida-workgraph", editable = true }
aiida-wannierjl = { path = "../aiida-wannierjl", editable = true }
aiida-wannier90-workflows = { path = "../aiida-wannier90-workflows", editable = true }
node-graph = { path = "../node-graph", editable = true }
# aiida-wannier90 was quarantined on PyPI (the simple index lists no files);
# install the v2.2.0 release from GitHub, pinned to the immutable sha that
# matches a pre-quarantine local clone, until the releases reappear.
aiida-wannier90 = { git = "https://github.com/aiidateam/aiida-wannier90", rev = "5b9436943fa04643ed44c7f6fd48b361e5470ef4" }

[tool.hatch.envs.docs]
installer = "uv"
features = ["docs"]

[tool.hatch.envs.docs.scripts]
build = [
  "make -C docs"
]

[tool.hatch.envs.mypy]
installer = "uv"
extra-dependencies = ["mypy~=1.19"]

[tool.hatch.envs.mypy.scripts]
check = "mypy src/ {args}"

[tool.mypy]
ignore_missing_imports = true
